# keycast

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  TODO.md  biome.json  bun.lockb  cargo.toml  docker-compose.yml  package.json  supervisord.conf
.github/workflows/: build_image.yaml
api/: .env.example  Cargo.toml  README.md  config.toml
api/database/migrations/: 0001_initial.sql
api/src/: database.rs  lib.rs  main.rs  state.rs
api/src/api/: error.rs  mod.rs  types.rs
api/src/api/http/: mod.rs  routes.rs  teams.rs
api/src/cli/: keys.rs  mod.rs
api/src/daemon_manager/: process_manager.rs
api/src/encryption/: aws_key_manager.rs  file_key_manager.rs  mod.rs
api/src/models/: authorization.rs  mod.rs  permission.rs  policy.rs  stored_key.rs  team.rs  user.rs
api/src/models/permissions/: allowed_kinds.rs  content_filter.rs  encrypt_to_self.rs  traits.rs
api/src/permissions/: allowed_kinds.rs  content_filter.rs  encrypt_to_self.rs  mod.rs
api/src/signer/: signer_manager.rs
backend/: .env.example  .gitignore  Cargo.toml
backend/database/migrations/: 0001_initial.sql
backend/migrations/: 0001_initial.sql
backend/src/: authorization.rs  database.rs  main.rs
backend/src/api/: extractors.rs  mod.rs
backend/src/api/http/: keys.rs  routes.rs  teams.rs
backend/src/encryption/: file_key_manager.rs  mod.rs
backend/src/models/: authorization.rs  mod.rs  permission.rs  policy.rs  stored_key.rs  team.rs  user.rs
backend/src/models/permissions/: allowed_kinds.rs  content_filter.rs
common/: Cargo.toml
common/src/: database.rs
common/src/encryption/: aws_key_manager.rs  file_key_manager.rs  mod.rs
core/: Cargo.toml
core/src/: database.rs  lib.rs  traits.rs
core/src/custom_permissions/: allowed_kinds.rs  content_filter.rs  encrypt_to_self.rs  mod.rs
core/src/encryption/: aws_key_manager.rs  file_key_manager.rs  mod.rs
core/src/types/: authorization.rs  permission.rs  policy.rs  stored_key.rs  team.rs  user.rs
database/: keycast.db
database/migrations/: 0001_initial.sql
generate_master_key/: Cargo.toml
generate_master_key/src/: main.rs
permissions/: Cargo.toml
permissions/src/: allowed_kinds.rs  content_filter.rs  encrypt_to_self.rs  traits.rs
scripts/: generateKey.ts
signer/: Cargo.toml
signer/signer/: mod.rs  signer_manager.rs
signer/src/: main.rs  signer_daemon.rs  signer_manager.rs
signing_daemon/: Cargo.toml
signing_daemon/src/: main.rs
web/: bun.lockb  package.json  tailwind.config.ts
web/src/: app.css  app.html  hooks.server.ts
web/src/lib/: currentUser.svelte.ts  keycast_api.svelte.ts  ndk.svelte.ts  types.ts
web/src/lib/components/: AdminPill.svelte  AuthorizationCard.svelte  Avatar.svelte  Copy.svelte  Header.svelte  Name.svelte  PermissionForm.svelte  PolicyCard.svelte  TeamCard.svelte
web/src/lib/utils/: auth.ts  dates.ts  nostr.ts  permissions.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
web/src/routes/(app)/teams/: +page.svelte
web/src/routes/(app)/teams/[id]/: +page.svelte
web/src/routes/(app)/teams/[id]/keys/[pubkey]/: +page.svelte
web/src/routes/(app)/teams/[id]/keys/[pubkey]/authorizations/new/: +page.svelte
web/src/routes/(app)/teams/[id]/keys/new/: +page.svelte
web/src/routes/(app)/teams/[id]/policies/new/: +page.svelte
web/src/routes/(app)/teams/[id]/users/new/: +page.svelte
