[workspace]
members = ["api", "core", "signer"]
resolver = "2"

[workspace.dependencies]
base64 = "0.22"
chrono = {version = "0.4", features = ["serde"]}
config = "0.15"
dotenv = "0.15"
nostr = {version = "0.37", features = ["nip04", "nip44", "nip46", "nip49", "nip59"], git="https://github.com/rust-nostr/nostr", rev="5ef7353789d54931b664639c11df1aa22e9aa37c"}
nostr-sdk = {version = "0.37", features = ["nip04", "nip44", "nip49", "nip59"], git="https://github.com/rust-nostr/nostr", rev="5ef7353789d54931b664639c11df1aa22e9aa37c"}
once_cell = "1.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "migrate", "macros", "chrono", "derive", "json" ] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.5", features = ["v4", "fast-rng"] }
