[package]
name = "keycast_api"
description = "A Nostr key manager and remote signer"
authors = ["Keycast Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
keycast_core = { path = "../core" }
permissions = { path = "../permissions" }

base64 = { workspace = true }
dotenv = { workspace = true }
nostr-sdk = {workspace = true}
nostr = {workspace = true}
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

aes-gcm = "0.10"
async-trait = "0.1"
axum = "0.7"
chrono = { workspace = true }
once_cell = "1.2"
sha256 = "1.5"
tower-http = { version = "0.5", features = ["trace", "util", "cors"] }
