[package]
name = "keycast_api"
description = "A Nostr key manager and remote signer"
authors = ["Keycast Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
axum = "0.7"
base64 = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
keycast_core = { path = "../core" }
nostr = {workspace = true}
nostr-sdk = {workspace = true}
once_cell = { workspace = true }
permissions = { path = "../permissions" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha256 = "1.5"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.5", features = ["trace", "util", "cors"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
