# common/Cargo.toml
[package]
name = "common"
authors = ["Keycast Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
once_cell = "1.2"
base64 = { workspace = true }
dotenv = { workspace = true }
nostr-sdk = {workspace = true}
rand = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
