[package]
name = "keycast_core"
authors = ["Keycast Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
base64 = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
nostr = { workspace = true }
nostr-sdk = {workspace = true}
once_cell = "1.2"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
