[package]
name = "permissions"
authors = ["Keycast Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
async-trait = "0.1"
nostr-sdk = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
