[package]
name = "keycast_signer"
description = "A Nostr remote signing daemon for the keycast application"
authors = ["Keycast Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
chrono = { workspace = true }
dotenv = { workspace = true }
nostr-sdk = {workspace = true}
nostr = {workspace = true}
nostr-connect = {version = "0.37"}
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

